fixed book stretching when only 1 book is there

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 .content {
     grid-column: 2/3;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
     gap: 20px;
 }
 
